--- a/src/ui/component/post/PostVideoPlayer.pug
+++ b/src/ui/component/post/PostVideoPlayer.pug
@@ -193,8 +193,7 @@ style.
 		display flex
 		font-feature-settings 'calt', 'tnum'
 		gap 0.333em
-		margin 0.666em 0
-		padding 0 0.666em
+		margin-top 0.666em
 		:fullscreen &
 			background var(--c-theme)
 			border-radius 2em
@@ -222,7 +221,7 @@ style.
 			opacity 1
 	.media-scrobbler
 		align-items center
-		background var(--c-shade-weak)
+		background var(--c-tint-normal)
 		border-radius 11px
 		display flex
 		flex 1
@@ -257,7 +256,7 @@ style.
 			margin-top 2px
 			width 4px
 	.media-volume
-		background var(--c-shade-weak)
+		background var(--c-tint-normal)
 		border-radius 11px
 		padding 0 9px
 		position relative
