--- a/src/ui/overlay/ThemeProviderOverlay.pug
+++ b/src/ui/overlay/ThemeProviderOverlay.pug
@@ -3,7 +3,7 @@ script.
 	
 	import { HexColor } from '../../lib/index.js'
 
-	DEFAULT_COLOR = '#ffffff'
+	DEFAULT_COLOR = '#ff4500' # orangered
 
 	set_theme_color = (color) ->
 		# Set main color
