--- a/src/ui/component/common/Button.pug
+++ b/src/ui/component/common/Button.pug
@@ -44,7 +44,7 @@ script.
 style.
 	.button
 		align-items center
-		background var(--c-shade-weak)
+		background var(--c-tint-normal)
 		border 1px solid transparent
 		border-radius 11px
 		display inline-flex
@@ -57,15 +57,14 @@ style.
 		user-select none
 		white-space nowrap
 		&.button-activated
-			background none
-			border-color var(--c-text-weak)
+			background var(--c-shade-weak)
 			cursor default
 		&:disabled
 		&.button-disabled
 			cursor auto
 			opacity 0.5
 		&:hover:not(.button-activated)
-			border-color var(--c-text-weak)
+			background var(--c-shade-weak)
 	.button-badge
 		border-radius 10px
 		background var(--c-blend-weak)
